--- a/index.html
+++ b/index.html
@@ -37,8 +37,54 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>"><% }}} %>
 
     <!-- Fonts and Icons -->
+    <!-- ustc
     <link rel="stylesheet" href="https://fonts.proxy.ustclug.org/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.proxy.ustclug.org/icon?family=Material+Icons">
+    -->
+    <link rel="stylesheet" href="https://fonts.css.network/css?family=Roboto:300,400,500,700,400italic">
+
+    <!-- Use local fonts for material icons because on some non-standard android phone/browser it doesn't work -->
+    <!--<link rel="stylesheet" href="https://fonts.css.network/icon?family=Material+Icons">-->
+    <link rel="stylesheet" href="/static/fonts/material-icons.css">
+    <!-- alternative for material-icons.css
+    <style>
+      @font-face {
+        font-family: 'Material Icons';
+        font-style: normal;
+        font-weight: 400;
+        src: url('/static/fonts/MaterialIcons-Regular.eot'); /* For IE6-8 */
+        src: local('Material Icons'),
+             local('MaterialIcons-Regular'),
+             url('/static/fonts/MaterialIcons-Regular.woff2') format('woff2'),
+             url('/static/fonts/MaterialIcons-Regular.woff') format('woff'),
+             url('/static/fonts/MaterialIcons-Regular.ttf') format('truetype');
+      }
+      .material-icons {
+        font-family: 'Material Icons';
+        font-weight: normal;
+        font-style: normal;
+        font-size: 24px;  /* Preferred icon size */
+        display: inline-block;
+        line-height: 1;
+        text-transform: none;
+        letter-spacing: normal;
+        word-wrap: normal;
+        white-space: nowrap;
+        direction: ltr;
+
+        /* Support for all WebKit browsers. */
+        -webkit-font-smoothing: antialiased;
+        /* Support for Safari and Chrome. */
+        text-rendering: optimizeLegibility;
+
+        /* Support for Firefox. */
+        -moz-osx-font-smoothing: grayscale;
+
+        /* Support for IE. */
+        font-feature-settings: 'liga';
+      }
+    </style>
+    -->
   </head>
   <body>
     <div id="app">This is your fallback content in case JavaScript fails to load.</div>
